hphp/hack/test/typecheck/reactive/mutability_flavors6_1.php.exp
File "mutability_flavors6_1.php", line 9, characters 23-45:
Inconsistent mutability of conditional expression, this branch returns owned mutable value (Typing[4293])
  File "mutability_flavors6_1.php", line 9, characters 13-19:
  But this one does not.
